...
    RwTooltip(
        tooltip = packStringResource(Res.string.common_refresh),
        modifier = modifier,
    ) {
        RwIconButton(
            onClick = onClick,
            modifier = Modifier.testTag("refresh_button"),
        ) {
            Icon(
                Icons.Outlined.Refresh,
                contentDescription = packStringResource(Res.string.common_refresh),
                modifier = Modifier
                    .rotate(if (spinning) rotation else 0f)
...
